# gnome-shell-extension-zorin-connect

./: .editorconfig  .eslintrc.json  .flake8  .gitignore  README.md  REUSE.toml  crowdin.yml  eslint.config.mjs  meson.build  meson_options.txt  package.json  package.json.license  pyproject.toml
.reuse/: dep5
data/: application.css  config.js.in  connect.ui  contacts.ui  conversation.ui  devel.ui  device.ui  menus.ui  meson.build  messaging.ui  metadata.json.in  notification.ui  org.gnome.Shell.Extensions.ZorinConnect.Preferences.desktop.in  org.gnome.Shell.Extensions.ZorinConnect.desktop.in  org.gnome.Shell.Extensions.ZorinConnect.gresource.xml  org.gnome.Shell.Extensions.ZorinConnect.gschema.xml  org.gnome.Shell.Extensions.ZorinConnect.sdp.xml  org.gnome.Shell.Extensions.ZorinConnect.service  org.gnome.Shell.Extensions.ZorinConnect.service.in  org.gnome.Shell.Extensions.ZorinConnect.xml  org.gnome.shell.extensions.zorin_connect.json-chrome  org.gnome.shell.extensions.zorin_connect.json-mozilla  settings.ui  telephony.ui  zorin-connect.xml
debian/: changelog  control  control.in  copyright  files  gbp.conf  gnome-shell-extension-zorin-connect-browsers.install  gnome-shell-extension-zorin-connect-browsers.lintian-overrides  gnome-shell-extension-zorin-connect-browsers.postinst  gnome-shell-extension-zorin-connect-browsers.postrm  gnome-shell-extension-zorin-connect.install  gnome-shell-extension-zorin-connect.lintian-overrides  not-installed  rules  zorin-connect  zorin-connect.gufw
meson/: mkzip.sh  (+1 more)
nautilus-extension/: meson.build  nautilus-zorin-connect.py
(+257 files in other folders)
